Form Style and error displaying

--- a/src/assets/styles/Buttons.scss
+++ b/src/assets/styles/Buttons.scss
@@ -40,6 +40,9 @@ button {
 .submit {
   border: none ;
   background-color: $primary;
+  &:disabled {
+    background-color: #969696;
+  }
 }
 
 .active {
