--- a/src/assets/styles/Buttons.scss
+++ b/src/assets/styles/Buttons.scss
@@ -40,9 +40,10 @@ button {
 .submit {
   border: none ;
   background-color: $primary;
-  &:disabled {
-    background-color: #969696;
-  }
+}
+
+.disabled {
+  background-color: $disabled;
 }
 
 .active {
