--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -21,3 +21,4 @@ section {
 @import '../assets/styles/Heading.scss';
 @import '../assets/styles/FormInput.scss';
 @import '../assets/styles/Buttons.scss';
+@import '../assets/styles/DisplayBox.scss';
