--- a/src/assets/styles/DisplayBox.scss
+++ b/src/assets/styles/DisplayBox.scss
@@ -6,10 +6,18 @@
   box-shadow: 0 0 5px $disabled;
   h6 {
     font-weight: bold;
-    font-size: 14px;
     margin: 0 0 2rem 0;
+    @media (min-width: 992px) {
+      font-size: 11px;
+    }
+    @media (min-width: 1200px) {
+      font-size: 12px;
+    }
   }
   div {
-    font-size: 12px;
+    font-size: 16px;
+    @media (min-width: 992px) {
+      font-size: 12px;
+    }
   }
 }
