--- a/src/views/App.scss
+++ b/src/views/App.scss
@@ -18,7 +18,13 @@ section {
   font-size: 12px;
 }
 
+h2 {
+  font-weight: bold;
+  margin: 3rem auto 1rem auto;
+}
+
 @import '../assets/styles/Heading.scss';
 @import '../assets/styles/FormInput.scss';
 @import '../assets/styles/Buttons.scss';
 @import '../assets/styles/DisplayBox.scss';
+@import '../assets/styles/Label.scss';
